--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.27)
 project(somename0)
 
+find_package(fmt)
+# sudo apt install libfmt-dev
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 set(CMAKE_CXX_EXTENSIONS NO) # for maximum portability
@@ -9,6 +12,6 @@ add_executable(${PROJECT_NAME} bruhtest.cpp)
 
 # add_library(somelib STATIC bruh.cpp)
 
-target_link_libraries(${PROJECT_NAME} somelib)
+target_link_libraries(${PROJECT_NAME} somelib fmt::fmt)
 
 add_subdirectory(lib)
